Fixed header min-height on Tablet

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -17,9 +17,11 @@
 
     @include onTablet {
       padding: $tabletContentTopPadding 0 130px;
+      min-height: 628px;
     }
 
     @include onDesktop {
+      min-height: 100vh;
       padding: $desktopContentTopPadding 0 203px;
     }
   }
